Standardize on xplat conventions and fix gitignore
- Use $PLAT_BIN env var instead of local BIN_DIR variable
- Add .mcp.json and .playwright-mcp/ to gitignore
- Add xplat requirements to README
- Enable MCP process in pc.yml

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Build artifacts
 .bin/
-wise-cli
-wise-mcp
-wise-server
+/wise-cli
+/wise-mcp
+/wise-server
 *.exe
 *.test
 *.out
@@ -17,11 +17,15 @@ wise-server
 # Environment (user-specific secrets)
 .env
 .env.local
+.mcp.json
 
 # IDE & OS
 .vscode/
 .idea/
 .DS_Store
+
+# Playwright MCP (test artifacts)
+.playwright-mcp/
 
 # Go
 vendor/
