Add xplat manifest and CI workflow
- Add xplat.yaml package manifest with processes and env vars
- Add GitHub Actions CI workflow (generated by xplat)
- Add lint task to Taskfile

CI runs build, test, and lint on Linux, macOS, and Windows.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -109,6 +109,11 @@ tasks:
     cmds:
       - go test ./...
 
+  lint:
+    desc: Run linter
+    cmds:
+      - go vet ./...
+
   clean:
     desc: Remove built binaries
     cmds:
